--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,24 +1,75 @@
 # To get started with security, check out the documentation:
+
 # http://symfony.com/doc/current/book/security.html
+
 security:
 
+    encoders:
+        usuariosBundle\Entity\User: bcrypt
+        Symfony\Component\Security\Core\User\User: plaintext
+
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
+
     providers:
-        in_memory:
-            memory: ~
+
+      our_db_provider:
+
+        entity:
+
+          class: usuariosBundle:User
+          property: username
+
+      in_memory:
+
+            memory:
+                users:
+                    admin:
+                        password: 1234
+                        roles: 'ROLE_ADMIN'
 
     firewalls:
+
         # disables authentication for assets and the profiler, adapt it according to your needs
+
         dev:
+
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        main:
+        usuarios:
+
+            pattern: ^/
             anonymous: ~
+            provider: our_db_provider
+
+            form_login:
+                login_path: /usuarios/login
+                check_path: /usuarios/login
+
+            logout:
+                path:   /usuarios/logout
+                target: /usuarios
+
+        main:
+
+            anonymous: ~
+
             # activate different ways to authenticate
 
+
+
             # http_basic: ~
+
             # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
 
+
+
             # form_login: ~
+
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+
+    access_control:
+
+            - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/usuarios/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/, roles: ROLE_USER }
