--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -45,10 +45,17 @@ security:
             form_login:
                 login_path: /usuarios/login
                 check_path: /usuarios/login
+                default_target_path: /usuarios
 
             logout:
                 path:   /usuarios/logout
                 target: /usuarios
+
+        admin:
+
+            pattern: ^/
+            anonymous: ~
+            provider: our_db_provider
 
         main:
 
@@ -69,7 +76,8 @@ security:
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
 
     access_control:
-
-            - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/API, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/usuarios/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/usuarios/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/admin, roles: ROLE_ADMIN }
             - { path: ^/, roles: ROLE_USER }
