--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -36,6 +36,10 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        admin:
+            pattern: ^/admin
+            http_basic: ~
+
         usuarios:
 
             pattern: ^/
@@ -51,11 +55,6 @@ security:
                 path:   /usuarios/logout
                 target: /usuarios
 
-        admin:
-
-            pattern: ^/
-            anonymous: ~
-            provider: our_db_provider
 
         main:
 
@@ -79,5 +78,6 @@ security:
             - { path: ^/API, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/usuarios/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/usuarios/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: ^/admin, roles: ROLE_ADMIN }
             - { path: ^/, roles: ROLE_USER }
+            - { path: ^/admin, roles: ROLE_ADMIN }
+            - { path: ^/usuarios/admin, roles: ROLE_ADMIN }
